fix: ファイル、ディレクトリ構造

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>画像拡大する機能</title>
-    <link rel="stylesheet" href="./style.css">
-    <script type="module" src="/main.js" defer></script>
+    <link rel="stylesheet" href="./src/style.css">
+    <script type="module" src="./src/main.js" defer></script>
   </head>
   <body>
     <div class="container">
@@ -13,15 +13,15 @@
       <div class="wrapper-image">
         <img
           id="first-image"
-          src="./live_season12.jpg"
-          alt="画像"
+          src="./images/live_season12.jpg"
+          alt="ApexLegends シーズン12"
           width="1920"
           height="1080"
         >
       </div>
       <div class="wrapper-image">
         <img
-          src="./EldenRing.jpg"
+          src="./images/EldenRing.jpg"
           alt="エルデンリング"
           width="1920"
           height="1080"
